# fine-grained-authorization-apigw-lambda-dynamodb

./: .gitignore  Cargo.toml  Makefile  README.md  custom-domain.yml
api-one/: Cargo.toml  Makefile  template.yml
api-two/: Cargo.toml  Makefile  template.yml
jwt/: Cargo.toml  Makefile  template.yml
jwt/src/: lib.rs
jwt/src/queries/: get_scope.rs  mod.rs
jwt/src/utils/: authorizer.rs  mod.rs
jwt/src/utils/injections/: jwt_di.rs  mod.rs
shared/: Cargo.toml
shared/src/: error.rs
shared/src/utils/: api_helper.rs  dynamodb.rs  mod.rs  unit_tests_helper.rs
