[package]
name = "api-two"
version.workspace = true
edition = "2021"

# AUTHORIZER
[[bin]]
name = "handler"
path = "src/bin/handler.rs"

[dependencies]
shared = { path = "../shared" }
aws_lambda_events.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
lambda_http.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
typed-builder.workspace = true

[dev-dependencies]
aws-smithy-http.workspace = true
mockall.workspace = true
mockito.workspace = true

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = "thin" # This is similar to "fat", but takes substantially less time to run while still achieving performance gains similar to "fat".
codegen-units = 1  # Reduce parallel code generation units
panic = "abort"
